--- a/Lab1/app/src/main/res/layout-land/activity_main.xml
+++ b/Lab1/app/src/main/res/layout-land/activity_main.xml
@@ -7,12 +7,12 @@
 
     <TextView
         android:id="@+id/operationField"
-        android:hint="Operation"
+        android:text="Operation"
         style="@style/OperationDisplay" />
 
     <TextView
         android:id="@+id/resultField"
-        android:hint="Result"
+        android:text="Result"
         style="@style/ResultDisplay" />
 
     <GridLayout
@@ -20,8 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:rowCount="6"
-        android:columnCount="5" >
+        android:rowCount="5"
+        android:columnCount="6" >
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/b_sqrt"
@@ -39,6 +39,11 @@
             style="@style/OptionalOperation" />
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/b_pow"
+            android:text="x^y"
+            style="@style/OptionalOperation" />
+
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/b_left_bracket"
             android:text="("
             style="@style/OptionalOperation" />
@@ -49,19 +54,14 @@
             style="@style/OptionalOperation" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/b_pow"
-            android:text="x^y"
+            android:id="@+id/b_sin"
+            android:text="sin"
             style="@style/OptionalOperation" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/b_ac"
-            android:text="AC"
-            style="@style/MainOperation" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/b_back"
-            android:text="back"
-            style="@style/MainOperation" />
+            android:id="@+id/b_cos"
+            android:text="cos"
+            style="@style/OptionalOperation" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/b_percent"
@@ -74,13 +74,36 @@
             style="@style/MainOperation" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/b_sin"
-            android:text="sin"
+            android:id="@+id/b_ac"
+            android:text="AC"
+            style="@style/MainOperation" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/b_back"
+            android:text="back"
+            style="@style/MainOperation" />
+
+
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/b_pi"
+            android:text="pi"
+            style="@style/OptionalOperation" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/b_e"
+            android:text="e"
             style="@style/OptionalOperation" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/b_7"
             android:text="7"
+            style="@style/Number" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/b_6"
+            android:text="6"
             style="@style/Number" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -94,44 +117,14 @@
             style="@style/Number" />
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/b_add"
+            android:text="+"
+            style="@style/MainOperation" />
+
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/b_mul"
             android:text="*"
             style="@style/MainOperation" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/b_cos"
-            android:text="cos"
-            style="@style/OptionalOperation" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/b_4"
-            android:text="4"
-            style="@style/Number" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/b_5"
-            android:text="5"
-            style="@style/Number" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/b_6"
-            android:text="6"
-            style="@style/Number" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/b_minus"
-            android:text="-"
-            style="@style/MainOperation" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/b_pi"
-            android:text="pi"
-            style="@style/OptionalOperation" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/b_1"
-            android:text="1"
-            style="@style/Number" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/b_2"
@@ -144,23 +137,34 @@
             style="@style/Number" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/b_add"
-            android:text="+"
-            style="@style/MainOperation" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/b_e"
-            android:text="e"
-            style="@style/OptionalOperation" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/b_000"
-            android:text="000"
+            android:id="@+id/b_4"
+            android:text="4"
             style="@style/Number" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/b_5"
+            android:text="5"
+            style="@style/Number" />
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/b_minus"
+            android:text="-"
+            style="@style/MainOperation" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/b_dot"
             android:text="."
+            style="@style/Number" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/b_1"
+            android:text="1"
+            style="@style/Number" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/b_000"
+            android:text="000"
             style="@style/Number" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -172,6 +176,5 @@
             android:id="@+id/b_equals"
             android:text="="
             style="@style/MainOperation" />
-
     </GridLayout>
 </LinearLayout>
